<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:baselineAligned="false"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- 水平左侧(遮挡) -->

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >
    </View>

    <!-- 水平中间 -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical" >

        <!-- 垂直顶部 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/holo_blue_dark"
                android:contentDescription="@string/ib_back"
                android:onClick="onSoftBackPressed"
                android:src="@drawable/ic_menu_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/ib_back"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextClock
                android:id="@+id/tc_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tv_countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <!-- 垂直中间 -->

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="center"
            android:orientation="vertical" >
        </LinearLayout>

        <!-- 垂直底部 -->

        <LinearLayout
            android:id="@+id/ll_buttom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_notice"
                android:src="@drawable/notice" />

            <TextView
                android:id="@+id/tv_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!-- 水平右侧(遮挡) -->

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >
    </View>

</LinearLayout>